<resources>
    <string name="app_name">CDRestaurant</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_Order">Menu</string>
    <string name="menu_Seat">Đặt chỗ</string>
    <string name="menu_Hoadon">Hóa đơn</string>
    <string name="menu_Doanhthu">Doanh thu</string>
    <string name="menu_Vote">Đánh giá</string>
    <string name="menu_User">Người dùng</string>
    <string name="menu_Signout">Đăng xuất</string>
</resources>