<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_Menu">

    <fragment
        android:id="@+id/nav_Menu"
        android:name="com.example.cdrestaurant.ui.menu.MenuFragment"
        android:label="@string/menu_Order"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_datcho"
        android:name="com.example.cdrestaurant.ui.datcho.DatchoFragment"
        android:label="@string/menu_Seat"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_hoadon"
        android:name="com.example.cdrestaurant.ui.bill.BillFragment"
        android:label="@string/menu_Hoadon"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_doanhthu"
        android:name="com.example.cdrestaurant.ui.doanhthu.DoanhThuFragment"
        android:label="Doanh Thu"
        tools:layout="@layout/doanh_thu_fragment" />
    <fragment
        android:id="@+id/nav_user"
        android:name="com.example.cdrestaurant.ui.user.UserFragment"
        android:label="Người dùng"
        tools:layout="@layout/user_fragment" />
    <fragment
        android:id="@+id/nav_vote"
        android:name="com.example.cdrestaurant.ui.vote.VoteFragment"
        android:label="Đánh giá"
        tools:layout="@layout/vote_fragment" />
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.cdrestaurant.ui.logout.logoutFragment"
        android:label="Đăng xuất"
        tools:layout="@layout/logout_fragment" />
</navigation>